# snake_cpp_tutorial

./: CMakeLists.txt  README.md  g++_compile.bash
include/: circle.hpp  game_window.hpp  shape.hpp  snake.hpp  square.hpp  star.hpp  timed_function.hpp
src/: main.cpp
